2001-02-26  Chris Morrow  <cmorrow@YottaYotta.com>

	* src/vectors.S (hal_zero_bss): Implemented in assembler for speed.
	* src/hal_misc.c (hal_zero_bss): Delete.

2001-02-15  Nick Garnett  <nickg@cygnus.co.uk>

	* src/hal_misc.c: Added option to call hal_ctrlc_isr() in default
	ISR when in RedBoot.

2001-02-12  Nick Garnett  <nickg@cygnus.co.uk>

	* include/mips.inc: Added some extra CP0 register names.

2001-02-09  Jesper Skov  <jskov@redhat.com>

	* src/vectors.S: Small tweak of comments to work around tools problem

2001-01-31  Nick Garnett  <nickg@cygnus.co.uk>

	* include/mips-stub.h: Added prototypes for __is_bsp_syscall() and
	hal_syscall_handler().

	* include/hal_arch.h:
	Reorganized HAL_SavedRegisters structure to work properly with a
	64 bit processor. Fields are now correctly sized, and aligned on
	the right boundaries.

	* include/arch.inc:
	Added option for variant and platform to supply extra bits to be
	added to INITIAL_SR.
	Reorganized register save area layout to match changes in
	hal_arch.h.
	Added macros sva, lva, mvatc0, mvafc0 to transfer 64 bit items to
	and from memory/CP0 (*va* is used because most such values are
	(virtual) addresses).

	* src/vectors.S: Added use of *va* macros where appropriate.
	
	* src/mips-stub.c: Added __is_bsp_syscall() function.

	* src/hal_syscall.c: Added this file to support GNUPro system
	calls in RedBoot.

	* cdl/hal_mips.cdl: Added hal_syscall.c to compile list.

2001-01-26  Jesper Skov  <jskov@redhat.com>

	* include/hal_intr.h: Added extern for hal_delay_us.

2001-01-26  Jesper Skov  <jskov@redhat.com>

	* include/variant.inc: Make hal_intc_decode macro mask the cause
	register with the status (interrupt mask) register.

2001-01-25  Jesper Skov  <jskov@redhat.com>

	* include/arch.inc: Allow hal_intc_decode to be defined by variant
	or platform.

2000-12-06  Jesper Skov  <jskov@redhat.com>

	* include/hal_intr.h (HAL_DELAY_US): Added.
	* src/hal_misc.c (hal_delay_us): Added. And fixed to work with an